...
                      child: Text(
                        "Register",
                        style: TextStyle(color: Colors.white),
                      ),
                    )),
                OutlinedButton(
                  key: Key('homeLoginButton'),
                  style: ButtonStyle(
                    padding: MaterialStateProperty.all(
                      EdgeInsets.fromLTRB(60, 15, 60, 15),
                    ),
                    shape: MaterialStateProperty.all(StadiumBorder()),
                    side: MaterialStateProperty.all(
...
